public struct CLIPS
{
    public const string JUMP = "Jump";
    public const string ROLL = "Roll";
    public const string RUN = "Run";
    public const string FALL = "Fall";
}

public struct TAGS
{
    public const string PLAYER = "Player";
    public const string NEW_ROAD = "NewRoad";
    public const string END_ROAD = "EndRoad";
    public const string COIN = "Coin";
    public const string OBSTACLE = "Obstacle";
}

public struct SOUNDS
{
    public const string JUMP = "Jump";
    public const string ROLL = "Roll";
    public const string FALL = "Fall";
    public const string STEP = "Step";
    public const string HIGHSCORE = "HighScore";
    public const string LETSMOVE = "LetsMove";
    public const string COIN = "Coin";
    public const string NEXTLEVEL = "NextLevel";
}

public struct POOL
{
    public const string ROAD = "Road";
    public const string COIN = "Coin";
    public const string OBSTACLE_1 = "Obstacle_1";
    public const string OBSTACLE_2 = "Obstacle_2";
    public const string OBSTACLE_3 = "Obstacle_3";
    public const string OBSTACLE_4 = "Obstacle_4";
}